[project]
name = "pyWATS_API"
version = "1.0.0b2"
dependencies = ["pydantic", "requests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pywats_api"

[tool.poetry.dependencies]
python = "^3.11"

[tool.setuptools]
packages = ["report"]